--- a/android-engineer.html
+++ b/android-engineer.html
@@ -162,11 +162,11 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">San Francisco, CA Vancouver, BC</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/foodpandasingapore/jobs/1782767'>Job Application for Senior Android Engineer  at foodpanda Singapore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foodpandasingapore/jobs/1782767'>Job Application for Senior Android Engineer  at foodpanda Singapore</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/trek-bicycle-du/job/oAezafwh'>Trek Bicycle Careers - Android Mobile Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-du/job/oAezafwh'>Trek Bicycle Careers - Android Mobile Software Engineer</a></h5> 
 <p><span class="badge badge-light">Waterloo</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -203,7 +203,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p>5 days ago ... Grow as a developer via company support for coding bootcamps, conferences, 
 and other continuing education. KotlinConf; DroidCon; Google I/O; Android Dev?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Deezer/743999691473309-lead-android-engineer-core-team'>Deezer Lead Android Engineer - Core Team | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Deezer/743999691473309-lead-android-engineer-core-team'>Deezer Lead Android Engineer - Core Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -295,11 +295,11 @@ Evangelist - Mobile Studio Manchester; Streamline Performance Tool Developer.</p
 <p><span class="badge badge-light">Bordeaux France</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4316376002'>Job Application for Senior Android Engineer at KeepTruckin</a></h5> 
+<h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4316376002'>Job Application for Senior Android Engineer at KeepTruckin</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4327388002'>Job Application for Android Engineer at KeepTruckin</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4327388002'>Job Application for Android Engineer at KeepTruckin</a></h5> 
 <p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -364,7 +364,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/M1Finance/743999690434822-android-engineer'>M1 Finance Android Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/M1Finance/743999690434822-android-engineer'>M1 Finance Android Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -400,7 +400,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/prontoteam/0420bd71-32de-4d4c-9db2-c05eb6c88437'>Pronto - Senior Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/prontoteam/0420bd71-32de-4d4c-9db2-c05eb6c88437'>Pronto - Senior Android Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-25</p>
 <hr/>
@@ -428,7 +428,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-06-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/envoy/257bc561-a607-4d24-bb12-390edbd2e5f4'>Envoy - Android Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/envoy/257bc561-a607-4d24-bb12-390edbd2e5f4'>Envoy - Android Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-24</p>
 <hr/>
