--- a/frontend.html
+++ b/frontend.html
@@ -64,7 +64,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://futrli.workable.com/j/30D409C576'>Futrli - Jobs: Lead Frontend Engineer - Apply online</a></h5> 
+<h5><a href='https://futrli.workable.com/j/30D409C576'>Futrli - Jobs: Lead Frontend Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -118,9 +118,43 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999692323814-software-engineer-frontend-point-of-sale-invoices'>Square Software Engineer (Frontend), Point of Sale Invoices | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999692323814-software-engineer-frontend-point-of-sale-invoices'>Square Software Engineer (Frontend), Point of Sale Invoices | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://zl.workable.com/j/637F7BEB08'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>1 day ago ... Apply online for the job of JR Front-end Developer at Docplanner / Doctoralia.</p>
+<hr/>
+<h5><a href='https://ecosia.workable.com/jobs/1066033'>Senior Software Developer: Frontend focus - Apply ... - Ecosia - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>4 days ago ... Apply online for the job of Senior Software Developer: Frontend focus at Ecosia.</p>
+<hr/>
+<h5><a href='https://zl.workable.com/j/22786BC705'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 18, 2019 ... Apply online for the job of JR Front-end Developer at Docplanner / Doctoralia.</p>
+<hr/>
+<h5><a href='https://www.workable.com/j/3A7E14AB66'>blubolt eCommerce - Jobs: Frontend Developers - Shopify ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>5 days ago ... This is an exciting role for a driven frontend developer with eCommerce 
+experience at an agency level. We are specifically looking for developers that 
+have?...</p>
+<hr/>
+<h5><a href='https://drover.workable.com/jobs/1077526'>Drover - Jobs: Frontend Developer - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>3 days ago ... Apply online for the job of Frontend Developer at Drover.</p>
+<hr/>
+<h5><a href='https://pulselive.workable.com/jobs/1064569'>Pulselive - Jobs: Front-end Developer - CONTRACT - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... Apply online for the job of Front-end Developer - CONTRACT at Pulselive.</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://drover.workable.com/j/7E8855D6FA?viewed=true'>Drover - Jobs: Lead Frontend Developer - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... Apply online for the job of Lead Frontend Developer at Drover.</p>
+<hr/>
+<h5><a href='https://pixel-union.workable.com/j/5BB78CDD9F?viewed=true'>Front-end Developer - Apply online - Pixel Union - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 18, 2019 ... Apply online for the job of Front-end Developer at Pixel Union.</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999692275746-frontend-developer'>Prospect Infosys Inc. Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -179,11 +213,11 @@ industry-leading SaaS based platform that solves a suite of provider data?...</p
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://dataguard.join.com/jobs/273365-praktikum-frontend-developer-m-w-d'>Job @ DataGuard (Munich): Praktikum Frontend Devel... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dataguard.join.com/jobs/273365-praktikum-frontend-developer-m-w-d'>Job @ DataGuard (Munich): Praktikum Frontend Devel... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://kingkong.workable.com/j/4A06BA4BF2'>King Kong - Jobs: Badass Mid-Weight Front-End Web Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kingkong.workable.com/j/4A06BA4BF2'>King Kong - Jobs: Badass Mid-Weight Front-End Web Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -231,7 +265,7 @@ built as a Single Page App using Angular (2+) and React application. We are?...<
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692181363-senior-frontend-developer'>Bosch Group Senior Frontend Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692181363-senior-frontend-developer'>Bosch Group Senior Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -250,7 +284,7 @@ make?...</p>
 <p>5 days ago ... ... infrastructure solutions, proactively guard against cyber threats, and leverage 
 machine learning alongside financial engineering to continuously turn data into?...</p>
 <hr/>
-<h5><a href='https://sevdesk.recruitee.com/o/frontend-entwickler-mwd'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sevdesk.recruitee.com/o/frontend-entwickler-mwd'>
       Frontend Entwickler (m/w/d) - sevDesk
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -393,7 +427,7 @@ published: 19.06.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/reddit/jobs/1786648'>Job Application for Senior Frontend Engineer, Video at Reddit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/reddit/jobs/1786648'>Job Application for Senior Frontend Engineer, Video at Reddit</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -425,43 +459,11 @@ published: 19.06.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/behalf/8ec61523-1686-4e39-831a-8006e63bb17f'>Behalf - Senior Frontend Engineer - Core</a></h5> 
+<h5><a href='https://jobs.lever.co/behalf/8ec61523-1686-4e39-831a-8006e63bb17f'>Behalf - Senior Frontend Engineer - Core</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... ... you'll use the latest frontend technologies to create the best development 
 experience for our developers, you'll help to build awesome UX, you'll architect 
 the?...</p>
-<hr/>
-<h5><a href='https://experian.referrals.selectminds.com/jobs/front-end-developer-angular-13045'>Front-End Developer (Angular) - Experian Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/newrelic/job/oifDafw4'>New Relic Careers - Senior Front-End Engineer</a></h5> 
-<p><span class="badge badge-light">Barcelona,</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://finanzchef24.join.com/jobs/265669-senior-frontend-engineer-m-w-d'>Job @ Finanzchef24 (Munich): Senior Frontend Engin... | JOIN</a></h5> 
-<p><span class="badge badge-light">Munich Munich</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999692248954-front-end-develeoper-bilingual-korea-english-'>Woongjin, Inc Front End Develeoper - Bilingual(Korea/English) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://qualitest-1.workable.com/j/AB0456B77B'>QualiTest - Jobs: R&D Frontend Developer EL - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://qualitest-1.workable.com/j/B757D4F380'>QualiTest - Jobs: R&D Frontend Team Leader EL - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://tundra.join.com/jobs/265315-senior-frontend-software-engineer-angular-react'>Job @ Tundra Inc (Z?rich): Senior Frontend Softwar... | JOIN</a></h5> 
-<p><span class="badge badge-light">Z?rich, Switzerland</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692240785-frontend-developer'>DataProphet Frontend Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
-<p>Posted on: 2019-07-24</p>
 <hr/>
 
 
